# AutoClicker

./: .gitignore  CMakeLists.txt  LICENSES.txt  README.md
.github/workflows/: release.yml
src/: autoclicker.cpp  autoclicker.h  main.cpp  ui.cpp  ui.h
